--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Anthony Serino
-                        <span class="text-primary">Taylor</span>
+                        Anthony
+                        <span class="text-primary">Serino</span>
                     </h1>
                     <div class="subheading mb-5">
                         209 Union Street · Taylor, PA 18517 · (570) 262-1808 ·
                         <a href="mailto:name@email.com">Serinot@yahoo.com</a>
                     </div>
-                    <p class="lead mb-5">I am an experienced software Emgineer with 4 years of experience developing, maintaining, and enhancing website applications (back-end and front-end), Dev-ops (kubernetes, jenkins, etc), and databases using SQL and MySQL, PostgreSQL, Mocrosoft SQL Server, etc.</p>
+                    <p class="lead mb-5">I am an experienced software Emgineer with 4 years of experience developing, maintaining, and enhancing website applications (back-end and front-end), Dev-ops (kubernetes, jenkins, etc), and databases. Where I leveraged  the languages PHP, Python, SQL, and more as needed in those 4 years of software engineering. Used tools like kubernetes, jenkins, sonarQube, mySQL, Microsoft SQL Server, SQLite, Flask, GIT, and others as needed to successfully build and maintain applications.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="www.linkedin.com/in/anthony-serino-857247160"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/anthony-serino-857247160/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/AnthonySerino"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
