--- a/index.html
+++ b/index.html
@@ -62,7 +62,16 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software engineer</h3>
                             <div class="subheading mb-3">Information Safeguard</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <ul>
+                                <li>Engineered a security platform for conducting automated security tests for technical controls</li>
+                                <li>Built a PHP website to leverage python to programmatically generate word document reports from form
+                                    submission data with template formatting</li>
+                                <li>Collaborated with management, internal and development partners regarding software application design
+                                    status and project progress.</li>
+                                <li>Coordinated with other engineers to evaluate and improve software and hardware interfaces</li>
+                                <li>Deployed and managed a Dev-Ops pipeline integrating security tests to automatically analyze and report
+                                    security findings across dozens of PROD apps</li>
+                              </ul> 
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
@@ -70,7 +79,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Jr. Software Engineer</h3>
                             <div class="subheading mb-3">Information Safeguard</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <ul>
+                                <li>Created a custom WordPress Plugin that allowed a user to upload multiple photos/post content, and
+                                    automatically publish content across multiple social media outlets (Facebook, Twitter(X))</li>
+                                <li>Helped maintain/update a large PHP website and database for a home care and hospice provider</li>
+                                <li>Developed, maintained, and enhanced Databases and data analytics around Fortune 500 confidential
+                                    information</li>
+                                <li>Deployed and managed a Dev-Ops pipeline integrating security tests to automatically analyze and report
+                                        security findings across dozens of PROD apps</li>
+                              </ul> 
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
@@ -83,10 +100,12 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
+                            <h3 class="mb-0">Misericordia University</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <div>Computer Science</div>
+                            <p>GPA: 3.45</p>
+                            <p>Minor in Mathematics</p>
+                            <p>Minor in Information Systems</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
                     </div>
@@ -96,7 +115,7 @@
                             <div class="subheading mb-3">Technology Magnet Program</div>
                             <p>GPA: 3.56</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2016 - May 2020</span></div>
                     </div>
                 </div>
             </section>
@@ -107,37 +126,16 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
+                        <li class="list-inline-item">Java, HTML, Python , PHP<i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item">Flask<i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item">SQLAlchemy<i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item">Pair Programming and Code Reviews<i class="fab fa-angular"></i></li>
+                        <li class="list-inline-item">Jira, Agile, Kanban, SCRUM <i class="fab fa-react"></i></li>
+                        <li class="list-inline-item">AWS and Azure<i class="fab fa-node-js"></i></li>
+                        <li class="list-inline-item">System debugging<i class="fab fa-sass"></i></li>
+                        <li class="list-inline-item">Jenkins, Kubernetes, rancher<i class="fab fa-less"></i></li>
+                        <li class="list-inline-item">MySQL, MS SQL, SQLite, PostgreSQL, SQL<i class="fab fa-wordpress"></i></li>
+                        <li class="list-inline-item">GitHub and Git Lab<i class="fab fa-gulp"></i></li>
                     </ul>
                 </div>
             </section>
@@ -146,57 +144,12 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from being a software engineer, I enjoy most of my time hanging out with friends and family, either indoors or outdoor!</p>
+                    <p class="mb-0">When I am not hanging out with friends an family, I follow a number of sci-fi and fantasy genre movies and television shows, enjoying playing video games, and I started my own little passion project for creating my own video game!</p>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
-            <section class="resume-section" id="awards">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
-                </div>
-            </section>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -204,4 +157,3 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
-1>
