--- a/index.html
+++ b/index.html
@@ -118,16 +118,16 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item">Java, HTML, Python , PHP<i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item">Flask<i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item">SQLAlchemy<i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item">Pair Programming and Code Reviews<i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item">Jira, Agile, Kanban, SCRUM <i class="fab fa-react"></i></li>
-                        <li class="list-inline-item">AWS and Azure<i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item">System debugging<i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item">Jenkins, Kubernetes, rancher<i class="fab fa-less"></i></li>
-                        <li class="list-inline-item">MySQL, MS SQL, SQLite, PostgreSQL, SQL<i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item">GitHub and Git Lab<i class="fab fa-gulp"></i></li>
+                        <li class="list-inline-item">Java, HTML, Python , PHP</li>
+                        <li class="list-inline-item">Flask</li>
+                        <li class="list-inline-item">SQLAlchemy</li>
+                        <li class="list-inline-item">Pair Programming and Code Reviews</li>
+                        <li class="list-inline-item">Jira, Agile, Kanban, SCRUM </li>
+                        <li class="list-inline-item">AWS and Azure</li>
+                        <li class="list-inline-item">System debugging</li>
+                        <li class="list-inline-item">Jenkins, Kubernetes, rancher</li>
+                        <li class="list-inline-item">MySQL, MS SQL, SQLite, PostgreSQL, SQL</li>
+                        <li class="list-inline-item">GitHub and Git Lab</li>
                     </ul>
                 </div>
             </section>
