--- a/index.html
+++ b/index.html
@@ -118,16 +118,16 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item">Java, HTML, Python , PHP</li>
-                        <li class="list-inline-item">Flask</li>
-                        <li class="list-inline-item">SQLAlchemy</li>
-                        <li class="list-inline-item">Pair Programming and Code Reviews</li>
-                        <li class="list-inline-item">Jira, Agile, Kanban, SCRUM </li>
-                        <li class="list-inline-item">AWS and Azure</li>
-                        <li class="list-inline-item">System debugging</li>
-                        <li class="list-inline-item">Jenkins, Kubernetes, rancher</li>
-                        <li class="list-inline-item">MySQL, MS SQL, SQLite, PostgreSQL, SQL</li>
-                        <li class="list-inline-item">GitHub and Git Lab</li>
+                        <li> Java, HTML, Python , PHP</li>
+                        <li> Flask</li>
+                        <li> SQLAlchemy</li>
+                        <li>Pair Programming and Code Reviews</li>
+                        <li>Jira, Agile, Kanban, SCRUM </li>
+                        <li>AWS and Azure</li>
+                        <li>System debugging</li>
+                        <li>Jenkins, Kubernetes, rancher</li>
+                        <li>MySQL, MS SQL, SQLite, PostgreSQL, SQL</li>
+                        <li>GitHub and Git Lab</li>
                     </ul>
                 </div>
             </section>
