--- a/index.html
+++ b/index.html
@@ -117,18 +117,18 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li> Java, HTML, Python , PHP</li>
-                        <li> Flask</li>
-                        <li> SQLAlchemy</li>
-                        <li>Pair Programming and Code Reviews</li>
-                        <li>Jira, Agile, Kanban, SCRUM </li>
-                        <li>AWS and Azure</li>
-                        <li>System debugging</li>
-                        <li>Jenkins, Kubernetes, rancher</li>
-                        <li>MySQL, MS SQL, SQLite, PostgreSQL, SQL</li>
-                        <li>GitHub and Git Lab</li>
-                    </ul>
+                        <ul>
+                            <li>Java, HTML, Python , PHP</li>
+                            <li>Flask</li>
+                            <li>SQLAlchemy</li>31
+                            <li>Pair Programming and Code Reviews</li>
+                            <li>Jira, Agile, Kanban, SCRUM </li>
+                            <li>AWS and Azure</li>
+                            <li>System debugging</li>
+                            <li>Jenkins, Kubernetes, rancher</li>
+                            <li>MySQL, MS SQL, SQLite, PostgreSQL, SQL</li>
+                            <li>GitHub and Git Lab</li>
+                        </ul>
                 </div>
             </section>
             <hr class="m-0" />
