--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                         <ul>
                             <li>Java, HTML, Python , PHP</li>
-                            <li>Flask</li>
-                            <li>SQLAlchemy</li>31
+                            <li>Flask, SQLAlchemy, pandas</li>
                             <li>Pair Programming and Code Reviews</li>
                             <li>Jira, Agile, Kanban, SCRUM </li>
                             <li>AWS and Azure</li>
