--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         209 Union Street · Taylor, PA 18517 · (570) 262-1808 ·
-                        <a href="mailto:name@email.com">Serinot@yahoo.com</a>
+                        <a href="mailto:serinot@yahoo.com">Serinot@yahoo.com</a>
                     </div>
                     <p class="lead mb-5">I am an experienced software Emgineer with 4 years of experience developing, maintaining, and enhancing website applications (back-end and front-end), Dev-ops (kubernetes, jenkins, etc), and databases. Where I leveraged  the languages PHP, Python, SQL, and more as needed in those 4 years of software engineering. Used tools like kubernetes, jenkins, sonarQube, mySQL, Microsoft SQL Server, SQLite, Flask, GIT, and others as needed to successfully build and maintain applications.</p>
                     <div class="social-icons">
