--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         209 Union Street · Taylor, PA 18517 · (570) 262-1808 ·
                         <a href="mailto:serinot@yahoo.com">Serinot@yahoo.com</a>
                     </div>
-                    <p class="lead mb-5">I am an experienced software Emgineer with 4 years of experience developing, maintaining, and enhancing website applications (back-end and front-end), Dev-ops (kubernetes, jenkins, etc), and databases. Where I leveraged  the languages PHP, Python, SQL, and more as needed in those 4 years of software engineering. Used tools like kubernetes, jenkins, sonarQube, mySQL, Microsoft SQL Server, SQLite, Flask, GIT, and others as needed to successfully build and maintain applications.</p>
+                    <p class="lead mb-5">I am a software Emgineer with 4 years of experience developing, maintaining, and enhancing website applications (back-end and front-end), Dev-ops, and databases.
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/anthony-serino-857247160/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/AnthonySerino"><i class="fab fa-github"></i></a>
