--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         209 Union Street · Taylor, PA 18517 · (570) 262-1808 ·
-                        <a href="mailto:serinot@yahoo.com">Serinot@yahoo.com</a>
+                        <span class="text-primary">Serinot@yahoo.com</span>
                     </div>
                     <p class="lead mb-5">I am a software Emgineer with 4 years of experience developing, maintaining, and enhancing website applications (back-end and front-end), Dev-ops, and databases.
                     <div class="social-icons">
