--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         209 Union Street · Taylor, PA 18517 · (570) 262-1808 ·
                         <span class="text-primary">Serinot@yahoo.com</span>
                     </div>
-                    <p class="lead mb-5">I am a software Emgineer with 4 years of experience developing, maintaining, and enhancing website applications (back-end and front-end), Dev-ops, and databases.
+                    <p class="lead mb-5">I am a software Engineer with 4 years of experience developing, maintaining, and enhancing website applications (back-end and front-end), Dev-ops, and databases.
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/anthony-serino-857247160/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/AnthonySerino"><i class="fab fa-github"></i></a>
